Complete rebuild: transition to schematic tile system